Adds bitwise N-Queens; n=12 completes in ~1.5s

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -23,10 +23,9 @@
     <script src="src/Board.js"></script>
     <script src="src/BoardView.js"></script>
     <script src="src/solvers.js"></script>
-
+    <script src="src/BitwiseNQueens.js"></script>
     <!-- tests -->
-    <script src="spec/BoardSpec.js"></script>
-    <script src="spec/BoardViewSpec.js"></script>
+
     <script src="spec/solversSpec.js"></script>
   </head>
   <body>
